--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>boa tarde familia</h1>
+    <figure class="imagem">
+        <img src="imagens/keanu-reeves-ccxp-scaled-e1670257577427.jpg">
+    </figure>
 </body>
 </html>
