--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>boa tarde familia</h1>
+    <a href="alanzinho.html"><button>alanzinho</button></a>
     <figure class="imagem">
         <img src="imagens/keanu-reeves-ccxp-scaled-e1670257577427.jpg">
     </figure>
