--- a/alanzinho.html
+++ b/alanzinho.html
@@ -6,7 +6,7 @@
     <title>top one from Brasil</title>
 </head>
 <body>
-    <a href="inex.html"><button>index</button></a>
+    <a href="index.html"><button>index</button></a>
     <h1>top 1 streamers da twich</h1>
     <img src="https://images.uncyc.org/pt/thumb/3/34/AlanzokaVesgo.jpeg/300px-AlanzokaVesgo.jpeg" alt="">
 </body>
