--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>boa tarde familia</h1>
     <a href="alanzinho.html"><button>alanzinho</button></a>
+    <a href="rodape.html"><button>rodape</button></a>
+    <a href="tabela.html"><button>tabela</button></a>
     <figure class="imagem">
         <img src="imagens/keanu-reeves-ccxp-scaled-e1670257577427.jpg">
     </figure>
