--- a/rodape.html
+++ b/rodape.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>welcome to the jungle</title>
+    <style>
+        footer{
+            position: absolute;
+            bottom: 0;
+            background-color: purple;
+            color: palegreen;
+            height: auto;
+            text-align: center;
+            line-height: normal;
+        }
+    </style>
 </head>
 <body>
     <footer>
         <p>purple</p>
+        
     </footer>
 </body>
 </html>
