--- a/rodape.html
+++ b/rodape.html
@@ -10,9 +10,10 @@
             bottom: 0;
             background-color: purple;
             color: palegreen;
-            height: auto;
+            height: 100px;
             text-align: center;
-            line-height: normal;
+            line-height: 100px;
+            width: 100%;
         }
     </style>
 </head>
