--- a/alanzinho.html
+++ b/alanzinho.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>top one from Brasil</title>
+    <style>
+        footer{
+            position: absolute;
+            bottom: 0;
+            background-color: purple;
+            color: palegreen;
+            height: 100px;
+            text-align: center;
+            line-height: 100px;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
     <a href="index.html"><button>index</button></a>
