--- a/alanzinho.html
+++ b/alanzinho.html
@@ -18,6 +18,10 @@
     </style>
 </head>
 <body>
+    <footer>
+        <p>purple</p>
+        
+    </footer>
     <a href="index.html"><button>index</button></a>
     <h1>top 1 streamers da twich</h1>
     <img src="https://images.uncyc.org/pt/thumb/3/34/AlanzokaVesgo.jpeg/300px-AlanzokaVesgo.jpeg" alt="">
