--- a/tabela.html
+++ b/tabela.html
@@ -22,6 +22,6 @@
         <p>purple</p>
         
     </footer>
-    <a href="tabela.html"><button>tabela</button></a>
+    <a href="index.html"><button>index</button></a>
 </body>
 </html>
