--- a/contato.html
+++ b/contato.html
@@ -18,5 +18,14 @@
             </ul>
         </nav>
     </header>
+    <form action="" method="post">
+    <fieldset>
+        <legend>identificação</legend>
+        <p>
+            <label for="name">Nome:</label>
+            <input type="text"name="name" placeholder="digite seu nome completo" maxlength="300"
+        </p>
+    </fieldset>
+    </form>
 </body>
 </html>
