--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <a href="alanzinho.html"><button>alanzinho</button></a>
     <a href="rodape.html"><button>rodape</button></a>
     <a href="tabela.html"><button>tabela</button></a>
+    <a href="contato.html"><button>contato</button></a>
     <figure class="imagem">
         <img src="imagens/keanu-reeves-ccxp-scaled-e1670257577427.jpg">
     </figure>
