--- a/contato.html
+++ b/contato.html
@@ -23,7 +23,11 @@
         <legend>identificação</legend>
         <p>
             <label for="name">Nome:</label>
-            <input type="text"name="name" placeholder="digite seu nome completo" maxlength="300"
+            <input type="text"name="name" placeholder="digite seu nome completo" maxlength="300">
+        </p>
+        <p>
+            <label for="senha">Senha</label>
+            <input type="password" id="senha" placeholder="digite sua senha" maxlength="300">
         </p>
     </fieldset>
     </form>
