--- a/contato.html
+++ b/contato.html
@@ -29,6 +29,16 @@
             <label for="senha">Senha</label>
             <input type="password" id="senha" placeholder="digite sua senha" maxlength="300">
         </p>
+        <p>
+            <label for="e-mail">E-mail</label>
+            <input type="text" id="e-mail" placeholder="digite seu e-mail" maxlength="300">
+        </p>
+        <p>
+            <input type="radio" name="sexo" id="Masculino">
+            <label for="Masculino"> Masculino</label>
+            <input type="radio" name="sexo" id="Feminino">
+            <label for="Feminino"> Feminino</label>
+        </p>
     </fieldset>
     </form>
 </body>
