--- a/contato.html
+++ b/contato.html
@@ -39,6 +39,10 @@
             <input type="radio" name="sexo" id="Feminino">
             <label for="Feminino"> Feminino</label>
         </p>
+        <p>
+            <label for="nascimento">Data de Nascimento:</label>
+            <input type="date" id="nascimento">
+        </p>
     </fieldset>
     </form>
 </body>
