--- a/contato.html
+++ b/contato.html
@@ -44,6 +44,29 @@
             <input type="date" id="nascimento">
         </p>
     </fieldset>
+    <fieldset>
+        <legend>Endereço</legend>
+        <p>
+            <label for="rua">Rua:</label>
+            <input type="text" id="nCasa" placeholder="nCasa" maxlength="300">
+        </p>
+        <p>
+            <label for="estado">Estado:</label>
+            <select name="" id="estado">
+                <optgroup label="Região sudeste">
+                <option value="RJ">Rio de Janeiro</option>
+                <option value="SP">São Paulo</option>
+                <option value="MG">Minas Gerais</option>
+                <option value="ES">Espirito Santo</option>
+                </optgroup>
+            </select>
+            <select name="" id="estado">
+                <optgroup label="Região sul">
+                <option value="PR">Paraná</option>
+                <option value="SC">Santa Catarina</option>
+                <option value="RS">Rio Grande do Sul</option>
+                </optgroup>
+        </p>
     </form>
 </body>
 </html>
